Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30842

Camera fails to start in CaptureStillImage mode if a capture resolution is specified.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0 Alpha
    • 5.0.2
    • Multimedia
    • None
    • Ubuntu 12.10 x64
      gstreamer-plugins-good 0.10.31
    • e4bf7d90bf32031641892783cc53f7712cb1c072

    Description

      The example below with the gstreamer camerabin backend will (probably, depending on the camera) fail to display the viewfinder unless either the captureMode or resolution binding is removed.

      VideoOutput {
          source: Camera {
              captureMode: Camera.CaptureStillImage
              imageCapture.resolution: "1280x720"
          }
      }
      

      This happens when the hardcoded viewfinder dimensions in the camerabinsession.cpp aren't supported by the camera, and can be avoided somewhat by selecting a resolution from the camera's list of supported resolutions.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            andrew.den.exter Andrew den Exter
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes