src/plugins/gstreamer/camerabin/camerabin.pro
@@ -29,7 +29,8 @@ HEADERS += \
     $$PWD/camerabinvideoencoder.h \
     $$PWD/camerabinresourcepolicy.h \
     $$PWD/camerabincapturedestination.h \
-    $$PWD/camerabincapturebufferformat.h
+    $$PWD/camerabincapturebufferformat.h \
+    $$PWD/camerabinviewfindersettings.h
 
 SOURCES += \
     $$PWD/camerabinserviceplugin.cpp \
@@ -46,6 +47,7 @@ SOURCES += \
     $$PWD/camerabinvideoencoder.cpp \
     $$PWD/camerabinresourcepolicy.cpp \
     $$PWD/camerabincapturedestination.cpp \
+    $$PWD/camerabinviewfindersettings.cpp \
     $$PWD/camerabincapturebufferformat.cpp
 
 maemo6 {
